# flask_task_manager

./: Makefile  README.md  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  docs.py  models.py  routes.py  schemas.py
migrations/versions/: 315e0ea04103_initial_migration.py
