[tool.poetry]
name = "flask_task_manager"
version = "0.1.0"
description = ""
authors = ["GrigoriyKruchinin <gkruchinin75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
python-dotenv = "^1.0.1"
mysql-connector-python = "^8.4.0"
pymysql = "^1.1.1"
cryptography = "^42.0.7"
marshmallow = "^3.21.2"
apispec = "^6.6.1"
apispec-webframeworks = "^1.1.0"
flask-swagger-ui = "^4.11.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
